# github-prjt-automation

./: .gitignore  0001-working-on-tests.patch  Makefile  README.md  config.yaml  coverage_boost.patch  coverage_boost_fix.patch  fixed_coverage_boost.patch  new_patch.patch  project.toml  requirements.txt  run_tests.py  scaffolding.css  setup.cfg
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  coverage.yml  python-tests.yml
src/: main.py
src/github_prjt_automation/: main.py  utils.py
tests/: __init__py  run_tests.py  run_tests.sh  test_edge_cases.py  test_edge_cases_copy.py  test_main.py  test_main_copy.py  test_utils.py
