[metadata]
name = github-prjt-automation
version = 0.1.0
description = Automate GitHub project management tasks
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
packages = find:
package_dir = =src
python_requires = >=3.8

[options.packages.find]
where = src